clusters/main/kubernetes/apps/outline/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: outline
  namespace: outline
  annotations:
    gethomepage.dev/description: "Formatted Notes App"
    gethomepage.dev/enabled: true
    gethomepage.dev/group: Tools
    gethomepage.dev/href: https://outline.${DOMAIN_0}/
    gethomepage.dev/icon: https://trueforge.org/img/hotlink-ok/chart-icons/outline.webp
    gethomepage.dev/name: Outline
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy
      sectionName: https
  hostnames:
    - "outline.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: outline
          port: 10196
